Mopup minor layout bugs. Thanks phiw13 and philwareham
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@3811 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/classic/textpattern.css
+++ b/textpattern/theme/classic/textpattern.css
@@ -993,7 +993,7 @@ form.cb_show_spam {
 	margin-left: .5em;
 }
 
-textarea#message {
+textarea#commentmessage {
 	height: 23.7272727272727em;
 }
 
